# supdevinci_chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
chatbot/: app.py
chatbot/agents/: doc_agent.py  form.py  form_agent.py  main_agent.py  sdv_scrapper.py  web_agent.py
chatbot/pages/: __init__.py  chatbot.py  form.py  home.py
chatbot/utils/: __init__.py  csv_handler.py  get_env_var.py
data/: candidatures_supdevinci.csv  sup_de_vinci_students.json
data/vectorstore/: chroma.sqlite3
data/vectorstore/supdevinci_web/: chroma.sqlite3
scripts/: setup-dev.sh
